getOutputSlice operation/tests
Investigate whether mutiple calls over FFI are a problem; we have to do 2 calls per op when using pinnable slices, 2nd to release the slice.
So we implement a copying get (getOutputSlice) that obviously doesn’t need to hold a pinnable slice back in Java; It may be more efficient for small value sizes.